--- a/themes/default-bootstrap/css/category.css
+++ b/themes/default-bootstrap/css/category.css
@@ -78,3 +78,20 @@ h2.catagory-main{
     color: #4f4f4f;
     margin-bottom: 15px;
 }
+
+@media (max-width: 768px) {
+  #subcategories ul{
+    margin: 0;
+  }
+  #subcategories ul li {
+    width: 21%;
+    margin: 0 0 13px 20px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 425px) {
+  #subcategories ul li {
+    width: 40%;
+  }
+}
